099_bst_set/grade.txt
Grading at 11/13/2022:22:31:16.196400
For commit ID 62e5f22f52a3c3f8bce9126fc176f6b6385074af
Grading at Sun Nov 13 05:31:15 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstSet<int>
...compiling...
In file included from 90-tester.cpp:1:
bstset.h: In instantiation of ‘void BstSet<T>::copy(BstSet<T>::Node*) [with T = int]’:
bstset.h:148:48:   required from ‘BstSet<T>::BstSet(const BstSet<T>&) [with T = int]’
90-tester.cpp:92:36:   required from here
bstset.h:135:26: error: ‘class BstSet<int>::Node’ has no member named ‘value’
  135 |     add(temp->key, temp->value);
      |                    ~~~~~~^~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstSet<std::string>
...compiling...
In file included from 90-tester.cpp:1:
bstset.h: In instantiation of ‘void BstSet<T>::copy(BstSet<T>::Node*) [with T = std::__cxx11::basic_string<char>]’:
bstset.h:148:48:   required from ‘BstSet<T>::BstSet(const BstSet<T>&) [with T = std::__cxx11::basic_string<char>]’
90-tester.cpp:92:36:   required from here
bstset.h:135:26: error: ‘class BstSet<std::__cxx11::basic_string<char> >::Node’ has no member named ‘value’
  135 |     add(temp->key, temp->value);
      |                    ~~~~~~^~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstSet<(a custom class we wrote)>
...compiling...
In file included from 90-tester.cpp:1:
bstset.h: In instantiation of ‘void BstSet<T>::copy(BstSet<T>::Node*) [with T = Tester]’:
bstset.h:148:48:   required from ‘BstSet<T>::BstSet(const BstSet<T>&) [with T = Tester]’
90-tester.cpp:92:36:   required from here
bstset.h:135:26: error: ‘class BstSet<Tester>::Node’ has no member named ‘value’
  135 |     add(temp->key, temp->value);
      |                    ~~~~~~^~~~~
The code did not compile.  This test failed.

Overall Grade: F
